maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:5: error: type mismatch;
 found   : Int(1)
 required: scala.collection.immutable.IndexedSeq[Int]
   	 case 1 => 
              ^Escaper:7: error: type mismatch;
 found   : Int(2)
 required: scala.collection.immutable.IndexedSeq[Int]
   	 case 2 => droite()
              ^