maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
	while(!estSurBiscuit){
		Random(3) match{
   	 case 1 => 
    		if(!estFaceMur){avance()}
   	 case 2 => droite()
    	case _ => 
    }
}
prendBiscuit();
}


	def Random(n : Int) = {
 var r = new scala.util.Random
 1 to n map { _ => r.nextInt(100) } 
}